<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_pizza"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:src="@drawable/pizza_icon_app_" />

    <TextView
        android:id="@+id/tv_food_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_pizza"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_food_counter"
        android:layout_centerHorizontal="true"
        android:text="@string/by"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/by"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fb_god"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fb_god_final" />

        <TextView
            android:id="@+id/michael"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/michael" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/by"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/creator"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/creator_final" />

        <TextView
            android:id="@+id/ilya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/ilya" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/puma_cat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/feedback"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/flaticon" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="60dp"
            android:text="@string/icons_author"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_baseline_feedback_24" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="50dp"
            android:text="@string/feedback" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>