<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="4dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/product_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Product"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/data_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/info_about_food"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_info">

            <ImageView
                android:id="@+id/im_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <!-- это где расоплгааются все объекты -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:padding="12dp">


                <!-- это первый Бел -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/proteins_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proteins_text"
                        android:textSize="18sp" />

                    <!-- это жир -->
                    <TextView
                        android:id="@+id/fats_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fats_text"
                        android:textSize="18sp" />

                    <!-- это угл -->
                    <TextView
                        android:id="@+id/carbs_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carbs_txt"
                        android:textSize="18sp" />

                    <!-- это кал -->
                    <TextView
                        android:id="@+id/kcal_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kcal_txt"
                        android:textSize="18sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <!-- это второй Бел -->
                    <TextView
                        android:id="@+id/proteins_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="10"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/fats_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="20"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/carbs_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="30"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/kcal_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="40"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>